--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,3 +1,9 @@
+---
+output: 
+  html_document: 
+    fig_caption: yes
+    keep_md: yes
+---
 
 #Reproducible Research: Peer Assessment 1
 
@@ -75,7 +81,7 @@ filled.data <- data
 filled.data$steps <- mapply(fill.value, filled.data$steps, filled.data$interval)
 
 ```
-
+#### Replaced each missing value with the mean value of its 5-minute interval
 
 ####4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
